修改接口详情页内容的现实，应对response中增加"RESPONSE_RESULT"属性带来的副作用

--- a/src/components/editor/RepositoryEditor.sass
+++ b/src/components/editor/RepositoryEditor.sass
@@ -275,6 +275,8 @@
     > .title
       font-size: 1.6rem
       margin-right: 1rem
+    > .subtitle
+      display: block
     > .toolbar
       float: right
       .checked-button
